// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render default text component styles 1`] = `
<p
  className="css-1sofp4k"
  fontFamily="IBM Plex Sans"
>
  text mex
</p>
`;

exports[`Text should render h1 component styles 1`] = `
<h1
  className="css-5toqyq"
  fontFamily="IBM Plex Sans"
>
  text mex
</h1>
`;

exports[`Text should render h2 component styles 1`] = `
<h2
  className="css-1i5w1wx"
  fontFamily="IBM Plex Sans"
>
  text mex
</h2>
`;

exports[`Text should render h3 component styles 1`] = `
<h3
  className="css-1bysshj"
  fontFamily="IBM Plex Sans"
>
  text mex
</h3>
`;
